--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 html {
   background-color: lightblue;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 .text-center {
   font-family: 'Pacifico', cursive;
@@ -15,3 +19,39 @@ html {
   padding: 2px 20px;
   border-radius: 5px;
 }
+.game {
+  width: 600px;
+  height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+.hole {
+  flex: 1 0 33.33%;
+  overflow: hidden;
+  position: relative;
+}
+.hole:after {
+  display: block;
+  background: url(images/dirt.svg) bottom center no-repeat;
+  background-size: contain;
+  content: '';
+  width: 100%;
+  height:70px;
+  position: absolute;
+  z-index: 2;
+  bottom: -30px;
+}
+.mole {
+  background: url('images/mole.svg') bottom center no-repeat;
+  background-size: 60%;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s;
+}
+.hole.up .mole {
+  top: 0;
+}
+
